build/log/idf_py_stderr_output_1018427
Command: make -j 14 all
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:26:
/home/umesh_adwait/esp-idf/components/spi_flash/include/esp_spi_flash.h:6:2: warning: #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead [-Wcpp]
    6 | #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead
      |  ^~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c: In function 'read_adc':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:34:43: error: expected expression before 'void'
   34 |         if(disp_toggle)  display_callback(void arg);
      |                                           ^~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c: At top level:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:98:1: warning: ignoring attribute 'section (".iram1.3")' because it conflicts with previous 'section (".iram1.0")' [-Wattributes]
   98 | {
      | ^
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:17:23: note: previous declaration here
   17 | static void IRAM_ATTR display_callback(void *arg);
      |                       ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:167: esp-idf/main/CMakeFiles/__idf_main.dir/dvr/interr_event.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c: In function 'app_main':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:83:5: error: implicit declaration of function 'start_20ms_timer' [-Wimplicit-function-declaration]
   83 |     start_20ms_timer();
      |     ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:63: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
